[project]
name = "search-engine-aapi"
version = "0.1.0"
description = "A search engine API"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "crawl4ai==0.3.3",
    "crawl4ai[sync]",
]
requires-python = ">=3.9,<3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/search_engine_aapi"]
